# further-ai-takehome

./: .gitignore  README.md
backend/: .env.example  .gitignore  langgraph.json  pyproject.toml
backend/agents/: models.py
backend/agents/basic/: graph.py
