[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.13,<3.14"

# deployment dependencies
dependencies = [
    "aiohttp>=3.13.3",
    "asyncpg>=0.31.0",
    "fastapi>=0.128.0",
    "grpcio>=1.76.0",
    "jinja2>=3.1.6",
    "langchain>=1.2.6",
    "langchain-anthropic>=1.3.1",
    "langchain-google-genai>=4.2.0",
    "langchain-openai>=1.1.7",
    "langgraph>=1.0.6",
    "langgraph-checkpoint-postgres>=3.0.3",
    "langgraph-cli[inmem]>=0.4.12",
    "langgraph-sdk>=0.3.3",
    "openinference-instrumentation-langchain>=0.1.58",
    "pandas>=2.3.3",
    "pgvector>=0.4.2",
    "psycopg-pool>=3.3.0",
    "psycopg[binary]>=3.3.2",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "sqlalchemy[asyncio]>=2.0.45",
    "uvicorn>=0.40.0",
]
# developer dependencies
[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "pytest>=8.3.5",
    "ruff>=0.8.2",
]

# [project.scripts]
# server = "server.main:main"